--- a/.github/workflows/monthly-scraper.yml
+++ b/.github/workflows/monthly-scraper.yml
@@ -3,9 +3,9 @@ name: Monthly Scraper
 
 on:
   schedule: # end of month, 17.00 UTC+0 is 00.00 UTC+7
-    - cron : 0 17 31     1,3,5,7,8,10,12
-    - cron : 0 17 30     4,6,9,11
-    - cron : 0 17 28,29  2
+    - cron : '0 17 31     1,3,5,7,8,10,12'
+    - cron : '0 17 30     4,6,9,11'
+    - cron : '0 17 28,29  2'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
