--- a/.github/workflows/monthly-scraper.yml
+++ b/.github/workflows/monthly-scraper.yml
@@ -27,5 +27,5 @@ jobs:
           git config --global user.name '${{ github.actor }}'
           git config --global user.email '${{ github.actor }}@users.noreply.github.com'
           git add ./api/v1/
-          git commit -m "[Automated] {YEARMONTH} ${GITHUB_SHA}"
+          git commit -m "[Automated] date:$YEARMONTH ref:${GITHUB_SHA}"
           git push
